# bedrock-protocol-binarystream

./: README.md  pyproject.toml
bedrock_protocol/binarystream/: __init__.py  binary_stream.py  read_only_binary_stream.py
bedrock_protocol/binarystream/_internal/: native_library.py
bedrock_protocol/binarystream/_internal/arm64/: libBinaryStream.dylib
bedrock_protocol/binarystream/_internal/x86_64/: libBinaryStream.dylib
tests/: test.py
